; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_sbp2.c_sbp2_scsi_abort.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_sbp2.c_sbp2_scsi_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_cmnd = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.sbp2_logical_unit* }
%struct.sbp2_logical_unit = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"%s: sbp2_scsi_abort\0A\00", align 1
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_cmnd*)* @sbp2_scsi_abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sbp2_scsi_abort(%struct.scsi_cmnd* %0) #0 {
  %2 = alloca %struct.scsi_cmnd*, align 8
  %3 = alloca %struct.sbp2_logical_unit*, align 8
  store %struct.scsi_cmnd* %0, %struct.scsi_cmnd** %2, align 8
  %4 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %2, align 8
  %5 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %4, i32 0, i32 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load %struct.sbp2_logical_unit*, %struct.sbp2_logical_unit** %7, align 8
  store %struct.sbp2_logical_unit* %8, %struct.sbp2_logical_unit** %3, align 8
  %9 = load %struct.sbp2_logical_unit*, %struct.sbp2_logical_unit** %3, align 8
  %10 = getelementptr inbounds %struct.sbp2_logical_unit, %struct.sbp2_logical_unit* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @fw_notify(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load %struct.sbp2_logical_unit*, %struct.sbp2_logical_unit** %3, align 8
  %16 = call i32 @sbp2_agent_reset(%struct.sbp2_logical_unit* %15)
  %17 = load %struct.sbp2_logical_unit*, %struct.sbp2_logical_unit** %3, align 8
  %18 = call i32 @sbp2_cancel_orbs(%struct.sbp2_logical_unit* %17)
  %19 = load i32, i32* @SUCCESS, align 4
  ret i32 %19
}

declare dso_local i32 @fw_notify(i8*, i32) #1

declare dso_local i32 @sbp2_agent_reset(%struct.sbp2_logical_unit*) #1

declare dso_local i32 @sbp2_cancel_orbs(%struct.sbp2_logical_unit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
